--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-remove-scroll": "^1.0.8",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-scroll-locky": "^1.5.0",
     "react-typed": "^1.1.2"
   },
   "scripts": {
