--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-ga": "^2.6.0",
     "react-pose": "^4.0.8",
     "react-remove-scroll": "^1.0.8",
     "react-router-dom": "^5.0.1",
