--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-scroll-locky": "^1.5.0",
-    "react-typed": "^1.1.2"
+    "react-typed": "^1.1.2",
+    "reactjs-popup": "^1.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
