--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apeman-react-slideshow": "^2.0.8",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-ga": "^2.6.0",
+    "react-image-gallery": "^0.8.18",
     "react-pose": "^4.0.8",
     "react-remove-scroll": "^1.0.8",
+    "react-responsive-carousel": "^3.1.49",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-scroll": "^1.7.12",
+    "react-spring": "^8.0.27",
     "react-typed": "^1.1.2",
     "reactjs-popup": "^1.4.1"
   },
@@ -35,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-alice-carousel": "^1.15.2"
   }
 }
